--- a/style.scss
+++ b/style.scss
@@ -157,3 +157,81 @@ img {
         grid-template-columns: 4fr 3fr;
     }
 }
+
+/* Languages */
+.languages {
+    .card {
+        transition: transform 0.2s ease-in;
+        text-align: center;
+        margin: 18px 10px 40px;
+        h4 {
+            font-size: 20px;
+            margin-bottom: 10px;
+        }
+        &:hover {
+            transform: translateY(-15px);
+        }
+    }
+}
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+/* Footer */
+.footer .social a {
+    margin: 0 10px;
+}
+
+/* Media Queries */
+/* Tables and under */
+@media (max-width: 768px) {
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .showcase {
+        height: auto;
+        .showcase-text {
+            text-align: center;
+            margin-top: 40px;
+        }
+        .showcase-form {
+            justify-self: center;
+            margin: auto;
+        }
+    }
+    .cli .grid img {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    .stats h3 {
+        font-size: 1.1rem;
+    }
+}
+/* Mobile */
+@media (max-width: 500px) {
+    .navbar {
+        height: 110px;
+        .flex {
+            flex-direction: column;
+        }
+        ul {
+            padding: 10px;
+            background-color: rgba(0, 0, 0, 0.1);
+        }
+    }
+    .showcase {
+        .grid {
+            grid-template-columns: 1fr;
+        }
+
+        .showcase-text {
+            text-align: center;
+        }
+    }
+}
