--- a/_utilities.scss
+++ b/_utilities.scss
@@ -1,8 +1,10 @@
 $text-color: #333;
-$blue-bg: #047aed;
+$primary-color: #047aed;
 $secondary-color: #1c3fa8;
 $dark-color: #002240;
 $light-color: #f4f4f4;
+$success-color: #5cb85c;
+$error-color: #d9534f;
 
 /* Utilities */
 .container {
@@ -10,23 +12,21 @@ $light-color: #f4f4f4;
     overflow: auto;
     margin: 0 auto;
     padding: 0 40px;
-
-    &.flex {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        height: 100%;
-    }
-
-    .card {
-        border-radius: 10px;
-        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        margin: 20px;
-        color: $text-color;
-        background-color: #fff;
-    }
+}
+.card {
+    border-radius: 10px;
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin: 10px;
+    color: $text-color;
+    background-color: #fff;
+}
+.flex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
 }
 
 .grid {
@@ -48,14 +48,14 @@ $light-color: #f4f4f4;
     border: none;
     padding: 10px 30px;
     border-radius: 5px;
-    background-color: $blue-bg;
+    background-color: $primary-color;
     color: #fff;
 
     &:hover {
         transform: scale(0.98);
     }
     &:active {
-        background-color: darken($blue-bg, 10%);
+        background-color: darken($primary-color, 10%);
     }
     &.btn-outline {
         background-color: transparent;
@@ -68,41 +68,91 @@ $light-color: #f4f4f4;
     text-align: center;
 }
 
-.py-1 {
-    padding: 1rem;
-}
-.py-2 {
-    padding: 1.5rem;
-}
-.py-3 {
-    padding: 2rem;
-}
-.py-4 {
-    padding: 3rem;
-}
-.py-5 {
-    padding: 4rem;
+/* Margin */
+.my-1 {
+    margin: 1rem 0;
 }
 
-.my-1 {
+.my-2 {
+    margin: 1.5rem 0;
+}
+
+.my-3 {
+    margin: 2rem 0;
+}
+
+.my-4 {
+    margin: 3rem 0;
+}
+
+.my-5 {
+    margin: 4rem 0;
+}
+
+.m-1 {
     margin: 1rem;
 }
-.my-2 {
+
+.m-2 {
     margin: 1.5rem;
 }
-.my-3 {
+
+.m-3 {
     margin: 2rem;
 }
-.my-4 {
+
+.m-4 {
     margin: 3rem;
 }
-.my-5 {
+
+.m-5 {
     margin: 4rem;
+}
+
+/* Padding */
+.py-1 {
+    padding: 1rem 0;
+}
+
+.py-2 {
+    padding: 1.5rem 0;
+}
+
+.py-3 {
+    padding: 2rem 0;
+}
+
+.py-4 {
+    padding: 3rem 0;
+}
+
+.py-5 {
+    padding: 4rem 0;
+}
+
+.p-1 {
+    padding: 1rem;
+}
+
+.p-2 {
+    padding: 1.5rem;
+}
+
+.p-3 {
+    padding: 2rem;
+}
+
+.p-4 {
+    padding: 3rem;
+}
+
+.p-5 {
+    padding: 4rem;
 }
 
 .bg-primary,
 .btn-primary {
-    background-color: $blue-bg;
+    background-color: $primary-color;
     color: #fff;
 }
 .bg-secondary,
@@ -114,6 +164,10 @@ $light-color: #f4f4f4;
 .btn-dark {
     background-color: $dark-color;
     color: #fff;
+}
+.bg-light {
+    background-color: $light-color;
+    color: #333;
 }
 .bg-primary a,
 .btn-primary a,
