--- a/style.css
+++ b/style.css
@@ -7,7 +7,17 @@
   padding: 0 40px;
 }
 
-.container.flex {
+.card {
+  border-radius: 10px;
+  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: 10px;
+  color: #333;
+  background-color: #fff;
+}
+
+.flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,16 +32,6 @@
       -ms-flex-pack: center;
           justify-content: center;
   height: 100%;
-}
-
-.container .card {
-  border-radius: 10px;
-  -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 20px;
-  color: #333;
-  background-color: #fff;
 }
 
 .grid {
@@ -81,44 +81,86 @@
   text-align: center;
 }
 
-.py-1 {
-  padding: 1rem;
-}
-
-.py-2 {
-  padding: 1.5rem;
-}
-
-.py-3 {
-  padding: 2rem;
-}
-
-.py-4 {
-  padding: 3rem;
-}
-
-.py-5 {
-  padding: 4rem;
-}
-
+/* Margin */
 .my-1 {
-  margin: 1rem;
+  margin: 1rem 0;
 }
 
 .my-2 {
-  margin: 1.5rem;
+  margin: 1.5rem 0;
 }
 
 .my-3 {
-  margin: 2rem;
+  margin: 2rem 0;
 }
 
 .my-4 {
-  margin: 3rem;
+  margin: 3rem 0;
 }
 
 .my-5 {
+  margin: 4rem 0;
+}
+
+.m-1 {
+  margin: 1rem;
+}
+
+.m-2 {
+  margin: 1.5rem;
+}
+
+.m-3 {
+  margin: 2rem;
+}
+
+.m-4 {
+  margin: 3rem;
+}
+
+.m-5 {
   margin: 4rem;
+}
+
+/* Padding */
+.py-1 {
+  padding: 1rem 0;
+}
+
+.py-2 {
+  padding: 1.5rem 0;
+}
+
+.py-3 {
+  padding: 2rem 0;
+}
+
+.py-4 {
+  padding: 3rem 0;
+}
+
+.py-5 {
+  padding: 4rem 0;
+}
+
+.p-1 {
+  padding: 1rem;
+}
+
+.p-2 {
+  padding: 1.5rem;
+}
+
+.p-3 {
+  padding: 2rem;
+}
+
+.p-4 {
+  padding: 3rem;
+}
+
+.p-5 {
+  padding: 4rem;
 }
 
 .bg-primary,
@@ -137,6 +179,11 @@
 .btn-dark {
   background-color: #002240;
   color: #fff;
+}
+
+.bg-light {
+  background-color: #f4f4f4;
+  color: #333;
 }
 
 .bg-primary a,
@@ -262,10 +309,6 @@ img {
   overflow: visible;
 }
 
-.showcase .showcase-text h1 {
-  font-size: 40px;
-}
-
 .showcase .showcase-text p {
   margin: 20px 0;
 }
@@ -360,6 +403,33 @@ img {
 .languages .flex {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+}
+
+/* Features */
+.features-head img {
+  width: 200px;
+  justify-self: flex-end;
+}
+
+.features-sub-head img {
+  width: 300px;
+  justify-self: flex-end;
+}
+
+.features-main .card > i {
+  margin-right: 20px;
+}
+
+.features-main .grid {
+  padding: 30px;
+}
+
+.features-main .grid > .card:first-child {
+  grid-column: span 3 / auto;
+}
+
+.features-main .grid > .card:nth-child(2) {
+  grid-column: span 2 / auto;
 }
 
 /* Footer */
