--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,7 @@ img {
 
 /* Navbar */
 .navbar {
-    background-color: $blue-bg;
+    background-color: $primary-color;
     color: #fff;
     height: 70px;
 
@@ -64,7 +64,7 @@ img {
 /* Showcase */
 .showcase {
     height: 400px;
-    background-color: $blue-bg;
+    background-color: $primary-color;
     color: #fff;
     position: relative;
 
@@ -87,10 +87,6 @@ img {
     }
 
     .showcase-text {
-        h1 {
-            font-size: 40px;
-        }
-
         p {
             margin: 20px 0;
         }
@@ -133,7 +129,6 @@ img {
     p {
         font-size: 1.2rem;
         font-weight: bold;
-        // color: $blue-bg;
     }
 }
 
@@ -177,6 +172,33 @@ img {
     flex-wrap: wrap;
 }
 
+/* Features */
+.features-head {
+    img {
+        width: 200px;
+        justify-self: flex-end;
+    }
+}
+.features-sub-head {
+    img {
+        width: 300px;
+        justify-self: flex-end;
+    }
+}
+.features-main {
+    .card > i {
+        margin-right: 20px;
+    }
+    .grid {
+        padding: 30px;
+        > .card:first-child {
+            grid-column: span 3 / auto;
+        }
+        > .card:nth-child(2) {
+            grid-column: span 2 / auto;
+        }
+    }
+}
 /* Footer */
 .footer .social a {
     margin: 0 10px;
